k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlydocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlydocs
  template:
    metadata:
      labels:
        app: onlydocs
    spec:
      containers:
      - name: onlydocs
        image: registry.default.svc.cluster.local:5000/onlydocs:latest
        ports:
        - containerPort: 80
