k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlydocs
spec:
  selector:
    app: onlydocs
  ports:
  - port: 80
    targetPort: 80
