k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlydocs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
    - host: docs.onlymore.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlydocs
                port:
                  name: http
  tls:
    - hosts:
        - docs.onlymore.net
