k8s/onlydocs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlydocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlydocs
  template:
    metadata:
      labels:
        app: onlydocs
    spec:
      containers:
      - name: onlydocs
        image: ghcr.io/theonlymore/onlydocs:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: onlydocs
spec:
  selector:
    app: onlydocs
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlydocs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
    - host: docs.rocheralexandre.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlydocs
                port:
                  name: http
  tls:
    - hosts:
        - docs.rocheralexandre.com
